# ArchNote

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
App/: CMakeLists.txt  MacTitleBarTransparent.h  MacTitleBarTransparent.mm  SvgIconItem.cpp  SvgIconItem.h  app_environment.h  import_qml_plugins.h  main.cpp  resources.qrc
App/File/: CMakeLists.txt
App/File/Bundle/: BundleCreator.h  BundleDetecter.cpp  BundleDetecter.h
App/Qml/: CMakeLists.txt  ContentsView.qml  Main.qml  qmldir
App/Qml/Components/: CMakeLists.txt  DSIconButton.qml  LXButton.qml  LXIconButton.qml
App/Qml/View/: CMakeLists.txt  ContentsView.qml  NotePadView.qml  Sidebar.qml  SidebarNavigation.qml
App/qml/: Main.qml
Test/: CMakeLists.txt  TestRegistry.cpp  TestRegistry.h  main.cpp
Test/TestFile/: TestIDGen.cpp  TestIDGen.h  TestNewFile.cpp  TestNewFile.h
Test/TestQml/: CMakeLists.txt  TestMain.qml
UI/: CMakeLists.txt  UI.qmlproject  UI.qmlproject.qtds  UI.qmlproject.qtds.025a4b7  qmlmodules
UI/content/: App.qml  CMakeLists.txt  Main.ui.qml  SidebarTest.qml
UI/imports/UI/: CMakeLists.txt  Constants.qml  EventListSimulator.qml
UI/src/: app_environment.h  main.cpp
